--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "faker": "^6.6.6",
     "flowbite": "^2.3.0",
+    "flowbite-react": "^0.9.0",
     "lucide": "^0.379.0",
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
