--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
     "@mui/x-charts": "^7.6.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@types/faker": "^6.6.9",
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
